--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,27 @@
 {
   "version": 2,
-  "name": "laravel-app",
   "builds": [
     {
       "src": "api/index.php",
       "use": "@vercel/php"
-    },
-    {
-      "src": "public/**/*",
-      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "api/index.php"
+      "dest": "/api/index.php"
     }
-  ]
+  ],
+  "env": {
+    "APP_ENV": "production",
+    "APP_DEBUG": "false",
+    "APP_KEY": "@app_key",
+    "APP_URL": "https://your-domain.com",
+    "DB_CONNECTION": "mysql",
+    "DB_HOST": "@db_host",
+    "DB_PORT": "@db_port",
+    "DB_DATABASE": "@db_database",
+    "DB_USERNAME": "@db_username",
+    "DB_PASSWORD": "@db_password"
+  }
 }
